--- a/docs/style/style.styl
+++ b/docs/style/style.styl
@@ -1,13 +1,6 @@
 --accent-color = #9AC1FF
 --background-color = #f0f0f0
-
-
-card()
-	padding 1em
-	border 1px solid #ddd
-	border-radius 1em
-	box-shadow 0 0 .5em #0003
-	display block
+--header-height = 8vh
 
 
 glass(color = #fffb)
@@ -25,7 +18,11 @@ html
 		display flex
 		flex-flow column
 		justify-content space-between
+		line-height 1.5
 		min-height 100vh
+
+		.hidden
+			visibility hidden
 
 		header
 			glass(--accent-color)
@@ -35,43 +32,63 @@ html
 			align-content center
 			padding 1em
 			padding-bottom .5em
-			margin-bottom 1em
-			border-radius 0 0 12px 12px
 			position sticky
+			z-index 1
 			top 0
+			height --header-height
 
 			#logo
 				height 3em
 				filter invert(1)
 
 		main
-			margin 1em 3em
-			min-height 200vh  // TODO: remove
-
 			#tab-layout
 				display flex
 				flex-flow row nowrap
 				justify-content space-between
-				align-content flex-start
+				align-content stretch
 
 				@media screen and (max-width 768px)
 					flex-wrap wrap
 
-				#nav-tab, #toc-tab
-					card()
-					flex 0 0 20%
+				.tab
+					max-height 100vh - --header-height
+					padding 1em 3ch 0
+					background-color lighten(--accent-color, 90%)
 
+					&#nav-tab
+						border-right 1px solid lighten(--accent-color, 50%)
+
+					&#toc-tab
+						border-left 1px solid lighten(--accent-color, 50%)
+
+					@media screen and (min-width 768px)
+						flex 0 0 15%
+						position sticky
+						top --header-height
+
+					.tab-title
+						width 100%
+						text-align center
 
 				#content-tab
 					flex-grow 1
-					margin 0 2em
+					max-width 768px
+					padding 0 2em
+					margin 1em auto
+
+				.toc-element
+					display block
+					color #000
 
 			.tip-title
-				font-size 1.5em
+				font-size 1.2em
+				margin-bottom .8em
 
 			code
 				display block
-				background-color darken(white, 3%)
+				background-color lighten(--accent-color, 90%)
+				color darken(--accent-color, 50%)
 				white-space pre
 				border-radius 5px
 				padding 1em
@@ -84,12 +101,22 @@ html
 						content counter(code-line)
 						display inline-block
 						width 3.2ch
-						margin-right .5ch
-						border-right 1px solid darken(white, 20%)
+						margin-right 1ch
+						border-right 1px solid --accent-color
 
-				.empty
-					height 1em
+			.auto-reference
+				color darken(--accent-color, 20%)
+				background-color lighten(--accent-color, 85%)
+				padding 1px
+				border-radius 1px
+
+				&:hover
+					color darken(--accent-color, 60%)
+
+			.anchor
+				transform translateY(-20vh)
 
 		footer
 			padding 1em 2em
-			background-color --background-color
+			border-top 1px solid lighten(--accent-color, 50%)
+			background-color lighten(--accent-color, 90%)
