--- a/docs/templates/mixins/code.pug
+++ b/docs/templates/mixins/code.pug
@@ -1,21 +1,18 @@
 mixin code(source)
 	- function processCode(text) {
-	- let match = text.replace(/^\s/, '').replace(/\s*$/, '').match(/^(\t)*/);
-	- let minIndent = match? match.length : 0;
+	- 	let match = text.match(/^(\t)*/);
+	- 	let minIndent = match? match.length : 0;
 	-
-	- for (const line of text.split('\n')) {
-	- 	const indent = line.match(/^(\t)*/).length;
-	- 	if (indent < minIndent) {
-	- 		minIndent = indent;
+	- 	for (const line of text.split('\n')) {
+	- 		const indent = line.match(/^(\t)*/).length;
+	- 		if (indent < minIndent) {
+	- 			minIndent = indent;
+	- 		}
 	- 	}
-	- }
 	-
-	- return text.replace(RegExp(`^\\t{${minIndent}}`, 'gm'), '');
+	- 	return text.replace(/^\s*|\s*$/g, '').replace(RegExp(`^\\t{${minIndent}}`, 'gm'), '');
 	- }
 
 	code
 		each line in processCode(source).split('\n')
-			if (line)
-				div= line
-			else
-				div.empty
+			div= line
