--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -37,7 +37,6 @@ html body main #tab-layout {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  align-content: stretch;
 }
 @media screen and (max-width: 768px) {
   html body main #tab-layout {
@@ -45,9 +44,14 @@ html body main #tab-layout {
   }
 }
 html body main #tab-layout .tab {
-  height: 92vh;
-  padding: 1em 3ch 0;
   background-color: #f5f9ff;
+  width: 100vw;
+  padding: 1em 3ch;
+}
+@media screen and (min-width: 768px) {
+  html body main #tab-layout .tab {
+    height: 92vh;
+  }
 }
 html body main #tab-layout .tab#nav-tab {
   border-right: 1px solid #cce0ff;
@@ -84,6 +88,8 @@ html body main code,
 html body main pre {
   background-color: #f5f9ff;
   color: #002f7b;
+  white-space: pre-wrap;
+  word-break: break-word;
   line-height: 1.4;
   border-radius: 5px;
   padding: 1em;
