--- a/docs/templates/footer.pug
+++ b/docs/templates/footer.pug
@@ -1,2 +1,3 @@
 block footer
 	span Developed by #[a(href='https://mstefan99.com/') Mikhail Stefantsev]
+	span Contribute to ardUI on #[a(href='https://github.com/MStefan99/ardUI') GitHub]!
