--- a/docs/templates/mixins/code.pug
+++ b/docs/templates/mixins/code.pug
@@ -15,7 +15,7 @@ mixin code(source)
 	- }
 
 
-	// TODO: add class keyword
+	//- TODO: add class keyword
 	- function formatCode(code) {
 	-  const rules = [];
 	-  rules.push({pattern: '([\'"].+["\'])|((?<=#include )&lt;.+&gt;)', type: 'string'});
