--- a/docs/templates/tabbed.pug
+++ b/docs/templates/tabbed.pug
@@ -7,7 +7,7 @@ block main
 			h3.tab-title Navigation
 			div#nav-container
 				block nav
-		div#content-tab
+		article#content-tab
 			block content
 		div#toc-tab.tab
 			h3.tab-title On this page
