--- a/docs/style/style.styl
+++ b/docs/style/style.styl
@@ -86,15 +86,15 @@ html
 						width 100%
 						text-align center
 
+					a
+						display block
+						color #000
+
 				#content-tab
 					flex-grow 1
 					max-width 768px
 					padding 0 2em
 					margin 1em auto
-
-				.toc-element
-					display block
-					color #000
 
 			.tip-title
 				font-size 1.2em
@@ -143,6 +143,9 @@ html
 				transform translateY(-10vh)
 
 		footer
+			display flex
+			flex-flow row nowrap
+			justify-content space-between
 			padding 1em 2em
 			border-top 1px solid lighten(--accent-color, 50%)
 			background-color lighten(--accent-color, 90%)
