added view tree and interface articles

--- a/docs/pages/tutorials/installation.pug
+++ b/docs/pages/tutorials/installation.pug
@@ -11,7 +11,7 @@ block content
 		|  Installing ardUI was made to be as easy as possible. To start using ardUI just download the latest version
 		|  of the framework from the repository. If you are using the Arduino IDE, then you can import the archive
 		|  directly (#[a(href='https://www.arduino.cc/en/guide/libraries#toc4') here is how you can do it]). If you are
-		|  using some other environment, like Platformio, then extract all files from archive to your library
+		|  using some other environment, like PlatformIO, then extract all files from archive to your library
 		|  directory, which would depend on your framework.
 		|
 		|  To test whether ardUI is installed correctly, add #[code #include "ardUI.h"] and compile your project.
