--- a/docs/templates/nav-tutorials.pug
+++ b/docs/templates/nav-tutorials.pug
@@ -1,2 +1,4 @@
 a(href='/pages/tutorials/installation') Installation
+a(href='/pages/tutorials/display_interface') Display interface
 a(href='/pages/tutorials/quickstart') Quick start
+a(href='/pages/tutorials/view_tree') View tree
