added activity article

--- a/docs/pages/tutorials/display_interface.pug
+++ b/docs/pages/tutorials/display_interface.pug
@@ -21,7 +21,7 @@ block content
 	p
 		|  ardUI architecture can be visualized like this, where your application is on the very top and your hardware
 		|  on the bottom:
-	img.mx-auto(src='/img/ardui_architecture.png' alt='ardUI architecture')
+	img(src='/img/ardui_architecture.png' alt='ardUI architecture')
 	p
 		|  ardUI display interface is the third layer in this image and it allows ardUI to communicate with
 		|  your display (usually via a display library). Display interface was made to be very similar to many
