--- a/docs/pages/tutorials/quickstart.pug
+++ b/docs/pages/tutorials/quickstart.pug
@@ -8,7 +8,7 @@ block nav
 
 
 block content
-	h1(data-anchor='Getting_started') Getting started with ardUI
+	h1(data-anchor='Getting started') Getting started with ardUI
 	+tip('A note about code examples', 'info')
 		span All code examples on this site are written in .cpp format instead of .ino used in Arduino
 			|  for better compatibility. Code in the .cpp format will run in Arduino IDE as well.
@@ -25,7 +25,7 @@ block content
 	`)
 	p This might not look like much, but this is actually a functional ardUI program! This is because ardUI starts
 		|  working the moment you include it so you don't have to worry about calling it yourself.
-	p(data-anchor='Drawing_elements') Okay, let's actually draw something now:
+	p(data-anchor='Drawing elements') Okay, let's actually draw something now:
 	+code(`
 		#include <Arduino.h>
 		#include "ardUI.h"
