--- a/docs/pages/tutorials/view_tree.pug
+++ b/docs/pages/tutorials/view_tree.pug
@@ -11,13 +11,13 @@ block content
 	p
 		|  View tree in ardUI is a collection of objects that describes all Views added to a particular Activity.
 		|  Consider this simple Activity with a title text and three buttons:
-	img.mx-auto(src='/img/basic_activity.png' alt='An example of simple Activity')
+	img.img-20(src='/img/basic_activity.png' alt='An example of simple Activity')
 	p
 		|  An Activity in ardUI can only contain a single View. But this is by design since we actually do not need
 		|  more to display even the complicated user interfaces. This is achieved with the help of Layouts.
 		|  Layouts are a kind of Views that can contain other views inside them. Let's now take a look at the view tree
 		|  of our example:
-	img.mx-auto(src='/img/basic_view_tree.png' alt='A view tree for the example above')
+	img.img-40(src='/img/basic_view_tree.png' alt='A view tree for the example above')
 	p
 		|  Here you can see that our Activity indeed only contains a single View but since it's a type of Layout
 		|  (to be specific, it is a LinearLayout, which we'll cover later) and it can contain other widgets,
