--- a/docs/templates/nav-tutorials.pug
+++ b/docs/templates/nav-tutorials.pug
@@ -1,4 +1,5 @@
 a(href='/pages/tutorials/installation') Installation
 a(href='/pages/tutorials/display_interface') Display interface
-a(href='/pages/tutorials/quickstart') Quick start
+a(href='/pages/tutorials/quickstart') Getting started
 a(href='/pages/tutorials/view_tree') View tree
+a(href='/pages/tutorials/activity') Activity basics
