--- a/docs/pages/tutorials/installation.pug
+++ b/docs/pages/tutorials/installation.pug
@@ -6,7 +6,7 @@ block nav
 
 
 block content
-	h1(data-anchor='Installing') Installing ardUI
+	h1(data-anchor='Installation') Installing ardUI
 	p
 		|  Installing ardUI was made to be as easy as possible. To start using ardUI just download the latest version
 		|  of the framework from the repository. If you are using the Arduino IDE, then you can import the archive
