--- a/docs/style/home.css
+++ b/docs/style/home.css
@@ -1,114 +1,1 @@
-html {
-  scroll-behavior: smooth;
-  font-family: sans-serif;
-}
-html body {
-  margin: 0;
-  min-height: 100vh;
-  background-color: #e2f1f9;
-}
-html body #logo {
-  filter: invert(1);
-  margin: 1rem 0 0 1rem;
-  height: 3em;
-}
-html body #splash {
-  overflow: visible;
-  background-image: linear-gradient(to bottom right, #9ac1ff 0% 46%, #8ab1ff 46% 47%, #c5d8ff 47%, transparent 50% 100%);
-}
-@media screen and (min-width: 1440px) {
-  html body #splash {
-    padding: 0 10vw;
-  }
-}
-@media screen and (min-width: 2560px) {
-  html body #splash {
-    padding: 0 20vw;
-  }
-}
-html body #splash span {
-  display: block;
-}
-html body #splash #left {
-  color: #fff;
-  font-size: 10em;
-  margin: 1rem 0 0 5rem;
-  max-width: 50vw;
-  font-weight: bold;
-}
-@media screen and (max-width: 1440px) {
-  html body #splash #left {
-    font-size: 7em;
-  }
-}
-@media screen and (max-width: 768px) {
-  html body #splash #left {
-    margin-left: 1rem;
-    font-size: 5em;
-  }
-}
-html body #splash #right {
-  margin: 25vh 2rem 0 0;
-  text-align: right;
-  font-size: 8em;
-  position: relative;
-  color: #9ac1ff;
-}
-@media screen and (max-width: 1440px) {
-  html body #splash #right {
-    font-size: 5em;
-  }
-}
-@media screen and (max-width: 768px) {
-  html body #splash #right {
-    font-size: 3em;
-  }
-}
-html body #splash #right #line2 {
-  font-weight: bold;
-}
-html body #splash #buttons {
-  font-size: 2em;
-  padding: 1rem;
-  margin-left: 30vw;
-}
-@media screen and (min-width: 768px) {
-  html body #splash #buttons {
-    margin-left: 30vw;
-    font-size: 3em;
-  }
-}
-@media screen and (min-width: 1440px) {
-  html body #splash #buttons {
-    margin-left: 15vw;
-  }
-}
-html body #splash #buttons .button {
-  display: inline-block;
-  position: relative;
-  padding: 0.75rem;
-  border-radius: 1em;
-  background-color: #e2f1f9;
-  color: #9ac1ff;
-  font-weight: bold;
-  font-variant: small-caps;
-  margin-bottom: 2rem;
-  text-decoration: none;
-  box-shadow: -0.5rem -0.5rem 1rem #f3f9fc , 0.5rem 0.5rem 1rem #c0e1f2;
-  transition: background-color 0.2s;
-}
-html body #splash #buttons .button:hover,
-html body #splash #buttons .button#button-start:hover {
-  background-color: #67a2ff;
-  color: #fff;
-}
-@media screen and (min-width: 1440px) {
-  html body #splash #buttons .button {
-    top: -5vh;
-  }
-}
-html body #splash #buttons .button#button-start {
-  background-color: #9ac1ff;
-  box-shadow: -0.5rem -0.5rem 1rem #f3f9fc , 0.5rem 0.5rem 1rem #c0e1f2 , 0 0 1rem #9ac1ff;
-  color: #fff;
-}
+html{scroll-behavior:smooth;font-family:sans-serif}html body{margin:0;min-height:100vh;background-color:#e2f1f9}html body #logo{filter:invert(1);margin:1rem 0 0 1rem;height:3em}html body #splash{overflow:visible;background-image:linear-gradient(to bottom right,#9ac1ff 0% 46%,#8ab1ff 46% 47%,#c5d8ff 47%,transparent 50% 100%)}@media screen and (min-width:1440px){html body #splash{padding:0 10vw}}@media screen and (min-width:2560px){html body #splash{padding:0 20vw}}html body #splash span{display:block}html body #splash #left{color:#fff;font-size:10em;margin:1rem 0 0 5rem;max-width:50vw;font-weight:bold}@media screen and (max-width:1440px){html body #splash #left{font-size:7em}}@media screen and (max-width:768px){html body #splash #left{margin-left:1rem;font-size:5em}}html body #splash #right{margin:25vh 2rem 0 0;text-align:right;font-size:8em;position:relative;color:#9ac1ff}@media screen and (max-width:1440px){html body #splash #right{font-size:5em}}@media screen and (max-width:768px){html body #splash #right{font-size:3em}}html body #splash #right #line2{font-weight:bold}html body #splash #buttons{font-size:2em;padding:1rem;margin-left:30vw}@media screen and (min-width:768px){html body #splash #buttons{margin-left:30vw;font-size:3em}}@media screen and (min-width:1440px){html body #splash #buttons{margin-left:15vw}}html body #splash #buttons .button{display:inline-block;position:relative;padding:.75rem;border-radius:1em;background-color:#e2f1f9;color:#9ac1ff;font-weight:bold;font-variant:small-caps;margin-bottom:2rem;text-decoration:none;box-shadow:-.5rem -.5rem 1rem #f3f9fc , .5rem .5rem 1rem #c0e1f2;transition:background-color .2s}html body #splash #buttons .button:hover,html body #splash #buttons .button#button-start:hover{background-color:#67a2ff;color:#fff}@media screen and (min-width:1440px){html body #splash #buttons .button{top:-5vh}}html body #splash #buttons .button#button-start{background-color:#9ac1ff;box-shadow:-.5rem -.5rem 1rem #f3f9fc , .5rem .5rem 1rem #c0e1f2 , 0 0 1rem #9ac1ff;color:#fff}
