--- a/docs/templates/nav-tutorials.pug
+++ b/docs/templates/nav-tutorials.pug
@@ -3,3 +3,4 @@ a(href='/pages/tutorials/display_interface') Display interface
 a(href='/pages/tutorials/quickstart') Getting started
 a(href='/pages/tutorials/view_tree') View tree
 a(href='/pages/tutorials/activity') Activity basics
+a(href='/pages/tutorials/view') View basics
