--- a/docs/templates/mixins/code.pug
+++ b/docs/templates/mixins/code.pug
@@ -19,18 +19,18 @@ mixin code(source)
 	- function formatCode(code) {
 	-  const rules = [];
 	-  rules.push({pattern: '([\'"].+["\'])|((?<=#include )&lt;.+&gt;)', type: 'string'});
-	-  rules.push({pattern: 'void|auto|bool|u?int(\\d+_t)?', type: 'typename'});
+	-  rules.push({pattern: '\\b(void|auto|bool|u?int(\\d+_t)?)\\b', type: 'typename'});
 	-  rules.push({pattern: '\\b(new|delete|for|while|do|if|using|virtual|override|return)\\b', type: 'keyword'});
 	-  rules.push({pattern: '\\b(public|protected|private)\\b', type: 'modifier'});
 	-  rules.push({pattern: '\\b\\w+::', type: 'scope'});
-	-  rules.push({pattern: '#\\w+', type: 'macro'});
-	-  rules.push({pattern: '\\w+(&lt;.*&gt;)?(?=\\(.*\\))', type: 'function'});
-	-  rules.push({pattern: '(?<!#.*)&lt;.+&gt;', type: 'template'});
-	-  rules.push({pattern: '\\b(\\d+)\\b', type: 'number'});
-	-  rules.push({pattern: '//.*', type: 'comment'});
+	-  rules.push({pattern: '#\\w+?\\b', type: 'macro'});
+	-  rules.push({pattern: '\\b\\w+(&lt;.*&gt;)?\\b(?=\\(.*\\))', type: 'function'});
+	-  rules.push({pattern: '(?<!#.*)&lt;.+?&gt;', type: 'template'});
+	-  rules.push({pattern: '\\b(\\d+?)\\b', type: 'number'});
+	-  rules.push({pattern: '//.*|/\\*.*?\\*/', type: 'comment'});
 	-
 	-  for (const rule of rules) {
-	-    code = code.replace(RegExp(`(${rule.pattern})`, 'ig'), `<span class="highlight ${rule.type}">$1</span>`);
+	-    code = code.replace(RegExp(rule.pattern, 'g'), `<span class="highlight ${rule.type}">$&</span>`);
 	-  }
 	-  return code;
 	- }
