--- a/docs/pages/tutorials/activity.pug
+++ b/docs/pages/tutorials/activity.pug
@@ -45,7 +45,7 @@ block content
 		#include "ardUI.h"
 		#include "Activity.h"
 
-		public PinActivity: public Activity {
+		class PinActivity: public Activity {
 			using Activity::Activity;
 
 			void onCreate() override {
@@ -64,7 +64,7 @@ block content
 				// Adding widgets, performing setup, etc.
 				startActivityForResult<ResultActivity>([](int code, Bundle results) -> void {
 					// Bundle "results" now contains our PIN
-					Serial.println(results.getString("pin"));
+					Serial.println(results.getInt("pin"));
 				});
 			}
 		}
