added view article

--- a/docs/style/style.styl
+++ b/docs/style/style.styl
@@ -3,9 +3,10 @@
 --background-color = #f0f0f0
 --header-height = 4rem
 
---types = 'typename' 'function' 'string' 'macro' 'template'\
+--types = 'typename' 'classname' 'function' 'string' 'macro' 'template'\
 'keyword' 'scope' 'modifier' 'number' 'comment'
 --color-typename = #7c550b
+--color-classname = #0b7c4f
 --color-function = #448329
 --color-macro = #500b94
 --color-string = #7e1e0e
