--- a/docs/pages/tutorials/quickstart.pug
+++ b/docs/pages/tutorials/quickstart.pug
@@ -37,7 +37,7 @@ block content
 
 			void onCreate() override {
 				auto t = new TextView("Hello world!");
-				setRootView(ll);
+				setRootView(t);
 			}
 		};
 
